apps/homelab/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage-system
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: public
spec:
  ingressClassName: nginx
  rules:
    - host: homepage.dtavana.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage-public
                port:
                  name: http
